// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Группа кнопок Вертикальная группа кнопок 1`] = `
<div
  class="button-group vertical"
>
  <button
    class="btn medium outlined purple"
    type="button"
  >
    Click 1
  </button>
  <button
    class="btn medium outlined purple"
    type="button"
  >
    Click 2
  </button>
</div>
`;

exports[`Группа кнопок Рендер группы кнопок 1`] = `
<div
  class="button-group"
>
  <button
    class="btn medium outlined purple"
    type="button"
  >
    Click 1
  </button>
  <button
    class="btn medium outlined purple"
    type="button"
  >
    Click 2
  </button>
</div>
`;
